--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ p{
     flex-basis: 30%;
     min-width: 250px;
     margin-bottom: 30px;
+    padding-top: 30px;
 }
 .col-3 img{
     width: 100%;
