--- a/style.css
+++ b/style.css
@@ -239,6 +239,18 @@ select:focus{
     width: 100px;
     display: inline-block;
 }
+.form-container p{
+    font-size: 10px;
+    text-align: left;
+}
+form .checkbox1{
+    width: 30px;
+    height: 10px;
+    position: absolute;
+    border : none;
+    transform: scale(1.75);
+    margin: -1px;
+}
 .form-btn{
     display: inline-block;
 }
@@ -249,6 +261,7 @@ select:focus{
     top: 130px;
     transition: transform 1s;
 }
+
 form input{
     width: 100%;
     height: 30px;
